--- a/GetImageOperation/Base.lproj/Main.storyboard
+++ b/GetImageOperation/Base.lproj/Main.storyboard
@@ -1,24 +1,115 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23504" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="lfM-Tk-XY2">
+    <device id="retina6_3" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Photos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GetImageOperation" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iQc-4F-Ay4">
+                                <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WBC-as-41z">
+                                    <size key="itemSize" width="349" height="308"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCollectionViewCell" id="uqs-GW-Q5h" customClass="ImageCollectionViewCell" customModule="GetImageOperation" customModuleProvider="target">
+                                        <rect key="frame" x="26.666666666666668" y="0.0" width="349" height="308"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="YJb-tJ-Mxi">
+                                            <rect key="frame" x="0.0" y="0.0" width="349" height="308"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NNg-dg-szq">
+                                                    <rect key="frame" x="0.0" y="0.0" width="349" height="308"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="NNg-dg-szq" secondAttribute="height" multiplier="4:3" id="vr9-Rv-Xj5"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="NNg-dg-szq" secondAttribute="bottom" id="LCa-e3-Sdd"/>
+                                                <constraint firstItem="NNg-dg-szq" firstAttribute="top" secondItem="YJb-tJ-Mxi" secondAttribute="top" id="a6D-my-4V2"/>
+                                                <constraint firstAttribute="trailing" secondItem="NNg-dg-szq" secondAttribute="trailing" id="dtd-6H-lJ8"/>
+                                                <constraint firstItem="NNg-dg-szq" firstAttribute="leading" secondItem="YJb-tJ-Mxi" secondAttribute="leading" id="fmE-DR-hdn"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="349" height="308"/>
+                                        <connections>
+                                            <outlet property="imageView" destination="NNg-dg-szq" id="exS-N8-9J8"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="eW2-LC-Bty"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="iQc-4F-Ay4" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="5u1-1b-9t0"/>
+                            <constraint firstAttribute="bottom" secondItem="iQc-4F-Ay4" secondAttribute="bottom" id="7Ed-v4-xcI"/>
+                            <constraint firstItem="iQc-4F-Ay4" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Vi0-ho-bOJ"/>
+                            <constraint firstItem="iQc-4F-Ay4" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="eKQ-Bo-lZR"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Photos" id="DwU-li-TYj">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="VBd-nM-bSs">
+                            <connections>
+                                <action selector="cancelProcess:" destination="BYZ-38-t0r" id="uZE-D5-saX"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="play" id="trd-dm-xgF">
+                            <connections>
+                                <action selector="runProcess:" destination="BYZ-38-t0r" id="Qeh-LD-taL"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageCollectionView" destination="iQc-4F-Ay4" id="0C8-T0-4s5"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1050.7462686567164" y="-27.459954233409608"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="7ZF-vk-DB1">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="lfM-Tk-XY2" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="WZK-tB-AC9">
+                        <rect key="frame" x="0.0" y="62" width="402" height="96"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="VfV-ZR-U6y"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fBD-3U-4z7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="131.34328358208955" y="-27.459954233409608"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
